# portfolio

./: .gitignore  README.md  deps.edn  package-lock.json  package.json  portfolio_dom.html  run_jsdom.js  run_jsdom_helicopter.js  run_jsdom_helicopter_diag.js  run_jsdom_helicopter_diag2.js  shadow-cljs.edn
.github/instructions/: acceptance-criteria.instructions.md  article-creation.instructions.md  clojurescript-style.instructions.md
.github/workflows/: deploy.yaml
docs/adr/: ADR-001-bicep-avm.md  ADR-002-deployment-stacks.md  ADR-003-medallion-architecture.md  ADR-004-clojurescript-frontend.md  ADR-005-event-hub-logs.md  ADR-006-azure-policy-governance.md  ADR-007-evolutionary-architecture.md
infra/: main.bicep
infra/portfolio/: main.bicep
resources/public/: agentic.html  architecture.html  breakout.html  fabric.html  helicopter.html  iac.html  index.html  invaders.html  life.html  logs.html  m365.html  matcher.html  particles.html  platform.html  platformer.html  policy.html  pricing.html  raytracer.html  repl.html  staticwebapp.config.json
resources/public/articles/: agentic-web.html  architecture-studio.html  caf-matcher.html  clojure-repl.html  cloud-platformer.html  fabric-pipeline.html  game-of-life.html  helicopter.html  iac-pipeline.html  log-pipeline.html  m365-admin.html  particle-storm.html  platform-console.html  policy-dashboard.html  pricing-optimizer.html  (+3 more)
rust/: Cargo.toml
rust/life/: Cargo.toml
rust/particles/: Cargo.toml
rust/raytracer/: Cargo.toml
rust/raytracer/src/: lib.rs
src/portfolio/: components.cljs  core.cljs  hub.cljs
(+42 files in other folders)
