[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
  "ImageData", "Performance",
] }
